--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "dist"
   ],
   "dependencies": {
-    "react-spring": "^9.2.3",
+    "@react-spring/web": "^9.2.4",
     "react-use-gesture": "^9.1.3",
     "rxjs": "^6.6.7",
     "screenfull": "^5.1.0"
